--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,11 +24,12 @@
 @import "reset";
 @import "golden_ratio";
 @import "landing_page";
+@import "dashboard";
 @import "show_containers";
 @import "edit_containers";
 @import "game_stats-modal";
 @import "itinerary_style";
-@import "calendar";
+@import "weather";
 @import "altcard";
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
 
@@ -105,103 +106,9 @@ button{
 #calendar{
   margin-top: 100px;
 }
-//h1 {
-//  font-size: 50px;
-//
-//}
 
 
 
-//dashboard (weather)//////////////////////////////////////////////////////
-@font-face {
-    font-family: 'weather';
-    src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/artill_clean_icons-webfont.eot');
-    src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/artill_clean_icons-webfont.eot?#iefix') format('embedded-opentype'),
-         url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/artill_clean_icons-webfont.woff') format('woff'),
-         url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/artill_clean_icons-webfont.ttf') format('truetype'),
-         url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/artill_clean_icons-webfont.svg#artill_clean_weather_iconsRg') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-// html {
-//   width: 100%;
-//   height: 100%;
-//   background: #1192d3 url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/austin-2.jpg) no-repeat bottom right;
-//   background-size: cover;
-// 	z-index: 999;
-// }
-
-// body {
-//   padding: 45px 0;
-//   font: 13px 'Open Sans', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-// }
-
-
-
-
-
-
-
-
-//dashboard//////////////////////////////////////////////////////
-#schedule-dashboard{
-  //@include outer-container();
-  position: relative;
-	display: inline-block;
-  margin-top: 100px;
-  width:100%;
-  height: 500px;
-
-
-
-  .tables.table-homepage{
-    @include span-columns(4);
-    margin-top: auto;
-    margin-right: 30px;
-    @include padding(0 null null 20px);
-
-    tbody{
-      color:whitesmoke;
-      tr:hover > td, tr:hover > th {
-        background-color: orange;
-      }
-      tr:nth-child(even) {
-        background-color: #434343;
-        &:hover > td {
-          background-color: orange;
-        }
-      }
-    }
-    th {
-      color: #45b6c3;
-      background-color: #1e1e1e;
-    }
-    tr:nth-child(even) {
-    background-color: #45b6c3;
-         }
-    tr:nth-child(odd) {
-    background-color: #303030;
-    }
-  }
-
-  .dash-table-picture{
-
-    @include span-columns(8);
-    background:
-      /* top, transparent red, faked with gradient */
-    linear-gradient(
-                    rgba(53, 149, 161, 0.5),
-                    rgba(53, 149, 161, 0.5)
-    ),
-    asset_url('test_image.jpg') no-repeat fixed center center;
-    background-size: 100%;
-    height: 500px;
-  }
-}
-
-
-//show page styles--------------------------------------------------------------------------------
 
 
 
